@@ -27,14 +27,18 @@
 #include <string.h>
 #include <unistd.h>
 
+#include <sys/types.h>
 #include <sys/ioctl.h>
+#ifndef __EMX__
 #include <sys/poll.h>
+#endif
+
 #include <sys/socket.h>
 #ifdef HAVE_SYS_SOCKIO_H
 #include <sys/sockio.h>
 #endif
 #include <sys/time.h>
-#include <sys/types.h>
+
 #include <sys/utsname.h>
 #include <sys/wait.h>
 #include <signal.h>
