@@ -1,3 +1,8 @@
+2000-02-09  Asbjorn Pettersen  <asbjornP@dualog.no>
+
+	* src/gnet-private.h: <sys/types.h> before <socket.h>
+	OS/2 havn't <sys/poll.h>.  __EMX__ is an OS/2 define.
+
 Tue Feb  8 17:40:58 2000  David A Helder  <dhelder@umich.edu>
 
 	* AUTHORS: Fixed Xavier's email address.
